--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+new_user_credentials.csv
 .secret-*
 **.sample
 #amplify-do-not-edit-end
